--- a/src/main/resources/templates/html/html/user.html
+++ b/src/main/resources/templates/html/html/user.html
@@ -40,10 +40,10 @@
                 <form class="form-inline">
                     <div class="form-group">
                         <label for="inlineFormInput" class="sr-only">Name</label>
-                        <input id="inlineFormInput" type="text" placeholder="按名字查找" class="mr-sm-3 form-control">
+                        <input id="inlineFormInput" v-model="params.realName" placeholder="按名字查找" class="mr-sm-3 form-control">
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="查询" class="btn btn-primary">
+                        <input type="button" @click="lookUser" value="查询" class="btn btn-primary">
                     </div>
                 </form>
 
@@ -62,33 +62,17 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>小东</td>
-                        <td>0-表示女</td>
-                        <td>19</td>
-                        <td>我很美</td>
-                        <td>
-                            <input type="submit" value="详细信息" class="btn-xs btn-primary userDetail">
-                        </td>
-
-                        <td>
-
-                            <input type="checkbox" value="" class="checkbox-template">
-
-                        </td>
-                    </tr>
-                    <tr>
+                    <tr v-for="u in pageInfo.list">
                         <th scope="row">{{u.id}}</th>
-                        <td>小标</td>
-                        <td>1-表示男</td>
-                        <td>20</td>
-                        <td>我很帅</td>
+                        <td>{{u.realName}}</td>
+                        <td>{{u.gender==1?'男':'女'}}</td>
+                        <td>{{u.age}}</td>
+                        <td>{{u.desc}}</td>
                         <td>
                             <input type="button" value="详细信息" class="btn-xs btn-primary userDetail">
                         </td>
                         <td>
-                            <input type="checkbox" value="" class="checkbox-template">
+                            <input type="checkbox" class="checkbox-template">
                         </td>
                     </tr>
                     </tbody>
@@ -147,6 +131,7 @@
 
 
 <script>
+
     $(function () {
         $("#header").load("same/header.html");
         $("#sidebar").load("same/sidebar.html");
