--- a/src/main/resources/templates/html/html/user_detail.html
+++ b/src/main/resources/templates/html/html/user_detail.html
@@ -19,70 +19,13 @@
 </head>
 <body>
 <header class="header">
-    <nav class="navbar navbar-expand-lg">
-        <div class="search-panel">
-            <div class="search-inner d-flex align-items-center justify-content-center">
-                <div class="close-btn">Close <i class="fa fa-close"></i></div>
-                <form id="searchForm" action="#">
-                    <div class="form-group">
-                        <input type="search" name="search" placeholder="What are you searching for...">
-                        <button type="submit" class="submit">Search</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="container-fluid d-flex align-items-center justify-content-between">
-            <div class="navbar-header">
-                <!-- Navbar Header--><a href="home.html" class="navbar-brand">
-                <div class="brand-text brand-big visible text-uppercase"><strong class="text-primary">小标</strong><strong>会议平台</strong></div>
-                <div class="brand-text brand-sm"><strong class="text-primary">X</strong><strong>B</strong></div></a>
-                <!-- Sidebar Toggle Btn-->
-                <button class="sidebar-toggle"><i class="fa fa-long-arrow-left"></i></button>
-            </div>
-            <div class="right-menu list-inline no-margin-bottom">
-                <!-- Log out -->
-                <div class="list-inline-item logout">
-                    <a id="logout" href="../index.html" class="nav-link"><span class="d-none d-sm-inline">Logout </span></a>
-                </div>
-            </div>
-        </div>
-    </nav>
+
 </header>
 
-<div class="d-flex align-items-stretch">
-    <!-- Sidebar Navigation-->
-    <nav id="sidebar">
-        <!-- Sidebar Header-->
-        <div class="sidebar-header d-flex align-items-center">
-            <div id="avatar" class="avatar"><img src="../img/avatar-6.jpg" alt="..." class="img-fluid rounded-circle"></div>
-            <div class="title">
-                <h1 class="h5">小标</h1>
-                <p>研发部</p>
-            </div>
-        </div>
-        <!-- Sidebar Navidation Menus--><span class="heading">Main</span>
-        <ul class="list-unstyled">
-            <li><a href="home.html"> <i class="icon-home"></i>主页 </a></li>
-            <li><a href="#userDropdown"  data-toggle="collapse"> <i class="icon-windows"></i>用户列表</a>
-                <ul id="userDropdown" class="collapse list-unstyled">
-                    <li><a href="user.html">查看用户</a></li>
-                    <li><a href="my_user.html">我关注的用户</a></li>
-                    <li><a href="article.html">发布文章</a></li>
-                    <li><a href="article_collect.html">我的收藏</a></li>
-                </ul>
-            </li>
-            <!--<li><a href="login.html"> <i class="icon-logout"></i>Login page </a></li>-->
+<div id="all" class="d-flex align-items-stretch">
 
-            <li><a href="#depDropdown"  data-toggle="collapse"> <i class="icon-windows2"></i>部门列表</a>
-                <ul id="depDropdown" class="collapse list-unstyled ">
-                    <li><a href="department.html">全部部门</a></li>
-                    <li><a href="meeting.html">会议系统</a></li>
-                </ul>
-            </li>
 
-        </ul>
 
-    </nav>
     <!-- Sidebar Navigation end-->
     <div class="page-content">
         <div class="page-header">
@@ -95,7 +38,7 @@
             <div class="col-lg-12">
                 <div class="block">
                     <div class="title"><strong>TA的头像</strong></div>
-                    <div class="avatar"><img src="../img/avatar-6.jpg" alt="加载中..." style="width: 150px;height: 150px" class="img-thumbnail rounded-circle"></div>
+                    <div class="avatar"><img :src="appVersion.pic" alt="加载中..." style="width: 150px;height: 150px" class="img-thumbnail rounded-circle"></div>
                     <!--<div style="margin-top: 15px" class="text-left">-->
                         <!--&lt;!&ndash; 用于展示上传文件名的表单 &ndash;&gt;-->
                         <!--<input id="showname" onclick="makeThisfile()" type="button" class="btn btn-primary" value="更换头像">-->
@@ -104,9 +47,9 @@
                     <!--</div>-->
                     <div class="title">
                         <br>
-                        <p class="h5"><strong>粉丝数：</strong><span>&nbsp;</span><span>&nbsp;</span><span>52</span></p>
+                        <p class="h5"><strong>粉丝数：</strong><span>&nbsp;</span><span>&nbsp;</span><span>{{appVersion.focus}}</span></p>
                         <br>
-                        <p class="h5"><strong>被看数：</strong><span>&nbsp;</span><span>&nbsp;</span><span>1168</span></p>
+                        <p class="h5"><strong>被看数：</strong><span>&nbsp;</span><span>&nbsp;</span><span>{{appVersion.look}}</span></p>
                         <br>
                     </div>
                     <div class="title"><strong>TA的数据</strong></div>
@@ -115,28 +58,28 @@
                             <div class="form-group row">
                                 <label class="col-sm-3 form-control-label">真实姓名</label>
                                 <div class="col-sm-9">
-                                    <input disabled="disabled" type="text" value="东方标准" class="form-control">
+                                    <input disabled="disabled" type="text" v-model="appVersion.realName" class="form-control">
                                 </div>
                             </div>
                             <div class="line"></div>
                             <div class="form-group row">
                                 <label class="col-sm-3 form-control-label">所属部门</label>
                                 <div class="col-sm-9">
-                                    <input disabled="disabled" type="text" value="东方标准" class="form-control">
+                                    <input disabled="disabled" type="text" v-model="appVersion.deptName" class="form-control">
                                 </div>
                             </div>
                             <div class="line"></div>
                             <div class="form-group row">
                                 <label class="col-sm-3 form-control-label">电话</label>
                                 <div class="col-sm-9">
-                                    <input disabled="disabled" type="text" value="020-xxxxxxxx" name="password" class="form-control">
+                                    <input disabled="disabled" type="text" v-model="appVersion.phone" name="password" class="form-control">
                                 </div>
                             </div>
                             <div class="line"></div>
                             <div class="form-group row">
                                 <label class="col-sm-3 form-control-label">年龄</label>
                                 <div class="col-sm-9">
-                                    <input disabled="disabled" type="text" placeholder="20" class="form-control">
+                                    <input disabled="disabled" type="text" v-model="appVersion.age" class="form-control">
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -144,10 +87,10 @@
                                 <div class="col-sm-9">
 
                                     <div class="i-checks">
-                                        <input disabled="disabled" id="radioCustom1" type="radio" value="1" name="sex" class="radio-template">
+                                        <input disabled="disabled" id="radioCustom1" type="radio" v-model="appVersion.gender" value="1" name="sex" class="radio-template">
                                         <label for="radioCustom1">男</label>
                                         <span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span>
-                                        <input disabled="disabled" id="radioCustom2" type="radio" value="0" name="sex" class="radio-template">
+                                        <input disabled="disabled" id="radioCustom2" type="radio" v-model="appVersion.gender" value="0" name="sex" class="radio-template">
                                         <label for="radioCustom2">女</label>
                                     </div>
                                 </div>
@@ -158,14 +101,14 @@
                             <div class="form-group row">
                                 <label class="col-sm-3 form-control-label">注册时间</label>
                                 <div class="col-sm-9">
-                                    <input type="text" disabled="" placeholder="2019-10-30 09:30:00" class="form-control">
+                                    <input type="text" disabled="" v-model="appVersion.registerTime"  class="form-control">
                                 </div>
                             </div>
                             <div class="line"></div>
                             <div class="form-group row">
                                 <label class="col-sm-3 form-control-label">登录时间</label>
                                 <div class="col-sm-9">
-                                    <input type="text" disabled="" placeholder="2019-10-30 19:30:00" class="form-control">
+                                    <input type="text" disabled="" v-model="appVersion.loginTime" class="form-control">
                                 </div>
                             </div>
                             <div class="line"></div>
@@ -174,7 +117,7 @@
                                 <label class="col-sm-3 form-control-label">是否私密 <br><small class="text-primary">默认为否，可以不设置</small></label>
                                 <div class="col-sm-9">
                                     <div class="i-checks">
-                                        <input disabled="disabled" id="checkboxCustom1" type="checkbox" value="" class="checkbox-template">
+                                        <input disabled="disabled" id="checkboxCustom1" type="checkbox" v-model="appVersion.isSecret" class="checkbox-template">
                                         <label for="checkboxCustom1">是否私密</label>
                                     </div>
 
@@ -212,5 +155,12 @@
 <script src="../js/charts-home.js"></script>
 <script src="../js/front.js"></script>
 <script src="../js/custom.js"></script>
+
+<script type="text/javascript" src="js/vue.js"></script>
+<script type="text/javascript" src="js/axios.js"></script>
+<script type="text/javascript" src="layer/layer.js"></script>
+
+<script type="text/javascript" src="dataJs/user/toUser.js"></script>
+
 </body>
 </html>
