--- a/src/main/resources/templates/html/html/user_detail.html
+++ b/src/main/resources/templates/html/html/user_detail.html
@@ -117,7 +117,7 @@
                                 <label class="col-sm-3 form-control-label">是否私密 <br><small class="text-primary">默认为否，可以不设置</small></label>
                                 <div class="col-sm-9">
                                     <div class="i-checks">
-                                        <input disabled="disabled" id="checkboxCustom1" type="checkbox" v-model="appVersion.isSecret" class="checkbox-template">
+                                        <input disabled="disabled" id="checkboxCustom1" type="checkbox" :checked="appVersion.isSecret==0" class="checkbox-template">
                                         <label for="checkboxCustom1">是否私密</label>
                                     </div>
 
