--- a/src/main/resources/templates/html/forget.html
+++ b/src/main/resources/templates/html/forget.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="form-bottom">
-            <form role="form" action="html/home.html" method="post" class="login-form">
+            <form role="form" method="post" class="login-form">
 
                 <!--上面的输入框尽可能不需要外边距，使用row解决-->
                 <div class="row">
@@ -62,8 +62,7 @@
                 <input type="button" @click="forget" class="btn btn-success" style="width: 485px;height: 40px" value="重置">
                 <div class="row">
                     <div style="padding: 10px 25px">
-                        <div style="display: inline-block;float: left" class="text-left"><a href="toLogin">返回登录</a></div>
-                        <!--<div style="display: inline-block;float: right" class="text-right"><a href="#">没有账号?</a></div>-->
+                        <div style="display: inline-block;float: left" class="text-left"><a href="http://127.0.0.1:8080/">返回登录</a></div>
                     </div>
                 </div>
 
