--- a/src/main/resources/templates/html/html/article.html
+++ b/src/main/resources/templates/html/html/article.html
@@ -18,69 +18,14 @@
 
 </head>
 <body>
-<header class="header">
-    <nav class="navbar navbar-expand-lg">
-        <div class="search-panel">
-            <div class="search-inner d-flex align-items-center justify-content-center">
-                <div class="close-btn">Close <i class="fa fa-close"></i></div>
-                <form id="searchForm" action="#">
-                    <div class="form-group">
-                        <input type="search" name="search" placeholder="What are you searching for...">
-                        <button type="submit" class="submit">Search</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="container-fluid d-flex align-items-center justify-content-between">
-            <div class="navbar-header">
-                <!-- Navbar Header--><a href="home.html" class="navbar-brand">
-                <div class="brand-text brand-big visible text-uppercase"><strong class="text-primary">小标</strong><strong>会议平台</strong></div>
-                <div class="brand-text brand-sm"><strong class="text-primary">X</strong><strong>B</strong></div></a>
-                <!-- Sidebar Toggle Btn-->
-                <button class="sidebar-toggle"><i class="fa fa-long-arrow-left"></i></button>
-            </div>
-            <div class="right-menu list-inline no-margin-bottom">
-                <!-- Log out -->
-                <div class="list-inline-item logout">
-                    <a id="logout" href="../index.html" class="nav-link"><span class="d-none d-sm-inline">Logout </span></a>
-                </div>
-            </div>
-        </div>
-    </nav>
+<header id="header" class="header">
+
 </header>
 
-<div class="d-flex align-items-stretch">
+<div id="all" class="d-flex align-items-stretch">
     <!-- Sidebar Navigation-->
     <nav id="sidebar">
-        <!-- Sidebar Header-->
-        <div class="sidebar-header d-flex align-items-center">
-            <div id="avatar" class="avatar"><img src="../img/avatar-6.jpg" alt="..." class="img-fluid rounded-circle"></div>
-            <div class="title">
-                <h1 class="h5">小标</h1>
-                <p>研发部</p>
-            </div>
-        </div>
-        <!-- Sidebar Navidation Menus--><span class="heading">Main</span>
-        <ul class="list-unstyled">
-            <li><a href="home.html"> <i class="icon-home"></i>主页 </a></li>
-            <li><a href="#userDropdown"  data-toggle="collapse" aria-expanded="true"> <i class="icon-windows"></i>用户列表</a>
-                <ul id="userDropdown" class="collapse show">
-                    <li><a href="user.html">查看用户</a></li>
-                    <li><a href="my_user.html">我关注的用户</a></li>
-                    <li class="active"><a href="article.html">发布文章</a></li>
-                    <li><a href="article_collect.html">我的收藏</a></li>
-                </ul>
-            </li>
-            <!--<li><a href="login.html"> <i class="icon-logout"></i>Login page </a></li>-->
 
-            <li><a href="#depDropdown"  data-toggle="collapse"> <i class="icon-windows2"></i>部门列表</a>
-                <ul id="depDropdown" class="collapse list-unstyled ">
-                    <li><a href="department.html">全部部门</a></li>
-                    <li><a href="meeting.html">会议系统</a></li>
-                </ul>
-            </li>
-
-        </ul>
 
     </nav>
     <!-- Sidebar Navigation end-->
@@ -99,10 +44,10 @@
                     <form class="form-inline">
                         <div class="form-group">
                             <label for="inlineFormInput" class="sr-only">Name</label>
-                            <input id="inlineFormInput" type="text" placeholder="按标题名字查找" class="mr-sm-3 form-control">
+                            <input id="inlineFormInput" v-model="params.inquire" type="text" placeholder="按标题名字查找" class="mr-sm-3 form-control">
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="查询" class="btn btn-primary">
+                            <input type="button" @click="selectAll" value="查询" class="btn btn-primary">
                         </div>
                     </form>
 
@@ -180,5 +125,20 @@
 <script src="../js/front.js"></script>
 <script src="../js/custom.js"></script>
 
+<script type="text/javascript" src="js/vue.js"></script>
+<script type="text/javascript" src="js/axios.js"></script>
+<script type="text/javascript" src="layer/layer.js"></script>
+
+
+<script type="text/javascript" src="dataJs/user/article.js"></script>
+
 </body>
+
+<script>
+
+    $(function () {
+        $("#header").load("same/header.html");
+        $("#sidebar").load("same/sidebar.html");
+    })
+</script>
 </html>
