--- a/src/main/resources/templates/html/register.html
+++ b/src/main/resources/templates/html/register.html
@@ -65,8 +65,7 @@
                 <input type="button" @click="register" class="btn btn-success" style="width: 485px;height: 40px" value="注册">
                 <div class="row">
                     <div style="padding: 10px 25px">
-                        <div style="display: inline-block;float: left" class="text-left"><a href="toLogin">返回登录</a></div>
-                        <!--<div style="display: inline-block;float: right" class="text-right"><a href="#">没有账号?</a></div>-->
+                        <div style="display: inline-block;float: left" class="text-left"><a href="http://127.0.0.1:8080/">返回登录</a></div>
                     </div>
                 </div>
 
