--- a/src/main/resources/templates/html/html/article_detail.html
+++ b/src/main/resources/templates/html/html/article_detail.html
@@ -26,7 +26,7 @@
 
 </header>
 
-<div class="d-flex align-items-stretch">
+<div id="all" class="d-flex align-items-stretch">
     <!-- Sidebar Navigation-->
 
     <!-- Sidebar Navigation end-->
@@ -41,29 +41,26 @@
 
             <div class="myTitle">
                 <h3 class="text-center">如何做一名合格的Java工程师</h3>
-                <input type="submit" value="取消收藏" class="btn btn-info">
+                <input type="button" @click="add" v-if="favorite==''" value="收藏文章" class="btn btn-info">
+                <input type="button" @click="del" v-else value="取消收藏" class="btn btn-danger">
 
             </div>
 
             <div class="myContent">
-                <p class="h6"><strong>发布人：</strong>小标</p>
-                <p class="h6"><strong>创建时间：</strong>2019-10-30 09:52:12</p>
-                <p class="h6"><strong>浏览次数：</strong>100</p>
-                <p class="h6"><strong>收藏次数：</strong>13052021</p>
-                <textarea style="padding: 2px" disabled="disabled" class="form-control" rows="11">做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力 做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力 做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力 需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力， 需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力， 需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力， 需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力， 做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力 做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力 做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力 需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力， 需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力， 需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力， 需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力， 做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力 做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力 做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力 需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力， 需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力， 需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力， 需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力，需要持之以恒的毅力， 做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力 做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力 做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力，做一名Java工程师需要付出非常大的努力</textarea>
+                <p class="h6"><strong>发布人：</strong>{{params.publishRealName}}</p>
+                <p class="h6"><strong>创建时间：</strong>{{params.publishDate}}</p>
+                <p class="h6"><strong>浏览次数：</strong>{{params.browseCount}}</p>
+                <p class="h6"><strong>收藏次数：</strong>{{params.count}}</p>
+                <textarea style="padding: 2px" disabled="disabled" class="form-control" rows="11">{{params.content}}</textarea>
 
             </div>
 
             <div class="myList">
                 <p>您关注的小伙伴等人也收藏了该文章</p>
-                <ul>
+                <ul v-for="u in common">
                     <li class="list-group-item">
-                        <a href="#">小东</a>
+                        <a href="#">{{u.realName}}</a>
                     </li>
-                    <li class="list-group-item">
-                        <a href="#">小标</a>
-                    </li>
-
                 </ul>
             </div>
         </section>
@@ -89,7 +86,13 @@
 <script src="../js/front.js"></script>
 <script src="../js/custom.js"></script>
 
+<script type="text/javascript" src="js/vue.js"></script>
+<script type="text/javascript" src="js/axios.js"></script>
+<script type="text/javascript" src="layer/layer.js"></script>
 
+
+
+<script type="text/javascript" src="dataJs/user/artilce_detail.js"></script>
 
 
 
