--- a/src/main/resources/templates/html/html/article.html
+++ b/src/main/resources/templates/html/html/article.html
@@ -50,7 +50,7 @@
                         </div>
                     </form>
 
-                    <input id = "addArt" type="submit" value="发布文章" class="btn btn-primary">
+                    <input type="button" @click="addArt" value="发布文章" class="btn btn-primary">
 
                 </div>
 
